--- a/views/lost.handlebars
+++ b/views/lost.handlebars
@@ -5,8 +5,8 @@
     <title>Lost</title>
   </head>
   <body>
-    <h1>You lost</h1>
-    <h1>{{#theWord}}</h1>
+    <h1>You lost!</h1>
+    <h1>The correct word was "{{theWord}}"</h1>
   <form class="newGame" action="/playAgain" method="post">
     <button> click here for a new game</button>
   </form>
